frontend/src/assets/style.scss
@import "vue-toastification/src/scss/_variables";
@import "vue-toastification/src/scss/_toastContainer";
@import "vue-toastification/src/scss/_toast";
@import "vue-toastification/src/scss/_closeButton";
@import "vue-toastification/src/scss/_progressBar";
@import "vue-toastification/src/scss/_icon";
@import "vue-toastification/src/scss/animations/_bounce";

// Base color definitions
$pp-purple-1: #391358; // Primary background color
$pp-purple-2: #7D34B7; // Main color for text and important elements
$pp-purple-3: #D284E9; // Accent color for highlights and secondary elements
$pp-green-1: #28EC8E; // Base color for buttons

// Button color variants for different states
$button-color: $pp-green-1; // Default button color
$button-text-color: $pp-purple-1; // Text color for buttons
$button-hover-color: lighten($pp-green-1, 10%); // Button color on hover
$button-active-color: darken($pp-green-1, 10%); // Button color when active/pressed
$button-disabled-bg: #e0e0e0; // Button background when disabled
$button-disabled-text: #a0a0a0; // Text color for disabled buttons

// Basic

@font-face {
  font-family: 'TrashHand';
  src: url('@/assets/fonts/TrashHand.ttf') format('truetype'); /* Adjust the path based on where you placed the font */
}

body {
  overflow-x: hidden;
  background: $pp-purple-3 !important;
  color: white;

  * {
    font-family: 'Trebuchet MS', sans-serif;
  }

  h1, h2, h3, h4, h5, h6, button {
    font-family: 'TrashHand', sans-serif;
  }
}

p:last-child, ul:last-child {
  margin-bottom: 0;
}


.bg-pp-purple-1 {
  background: $pp-purple-1;
}
.bg-pp-purple-2 {
  background: $pp-purple-2;
}
.bg-pp-purple-3 {
  background: $pp-purple-3;
}

.text-pp-purple-2 {
  color: $pp-purple-2;
}

.text-pp-winner {
  color: green;
  fill: green;
}

.text-pp-looser {
  color: red;
  fill: red;
}

